--- a/equalizer-landing-page/style.css
+++ b/equalizer-landing-page/style.css
@@ -65,7 +65,15 @@ h2 {
   color: var(--clr-font-dark);
 }
 
+.btn-dark:hover {
+  background-color: var(--clr-accent-1);
+}
+
 .btn-light {
   background-color: #fcfaf9;
   color: var(--clr-font-light);
+}
+
+.btn-light:hover {
+  background-color: var(--clr-accent-2);
 }
