--- a/equalizer-landing-page/style.css
+++ b/equalizer-landing-page/style.css
@@ -27,6 +27,14 @@ body {
 .wrapper {
   margin: 0 auto;
   width: 375px;
+  background-image: url(/assets/bg-main-mobile.png);
+  background-attachment: fixed;
+  background-position: 75px -200px;
+  background-repeat: no-repeat;
+}
+
+header {
+  margin: 3rem 0;
 }
 
 h1 {
