--- a/equalizer-landing-page/style.css
+++ b/equalizer-landing-page/style.css
@@ -26,7 +26,7 @@ body {
 
 .wrapper {
   margin: 0 auto;
-  width: 375px;
+  width: 400px;
   background-image: url(/assets/bg-main-mobile.png);
   background-attachment: fixed;
   background-position: 75px -200px;
@@ -47,6 +47,34 @@ h2 {
   font-size: 2rem;
   font-weight: 700;
   line-height: 3.5rem;
+}
+
+.cta-cards {
+  background-color: var(--clr-secondary);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 20px;
+  background-image: url(/assets/bg-pattern-2.svg);
+  background-repeat: no-repeat;
+  background-position: top;
+}
+
+.img-card {
+  width: 250px;
+  margin-top: -100px;
+  margin-bottom: 50px;
+}
+
+.price-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  padding: 1rem 2rem;
+  border-radius: 20px;
+  background-color: var(--clr-primary);
+  color: var(--clr-font-dark);
 }
 
 .loose {
