--- a/equalizer-landing-page/style.css
+++ b/equalizer-landing-page/style.css
@@ -36,6 +36,12 @@ body {
   background-repeat: no-repeat;
 }
 
+a {
+  text-decoration: none;
+  font-weight: 700;
+  color: var(--clr-font-light);
+}
+
 h1 {
   margin-bottom: 1rem;
   font-size: 2.5rem;
@@ -44,6 +50,7 @@ h1 {
 }
 
 h2 {
+  margin-bottom: 1rem;
   font-size: 2rem;
   font-weight: 700;
   line-height: 3.5rem;
@@ -51,6 +58,14 @@ h2 {
 
 header {
   padding: 2rem;
+}
+
+footer {
+  padding: 2rem;
+}
+
+footer p {
+  margin-block: 2rem;
 }
 
 .hero {
@@ -126,4 +141,9 @@ header {
 
 .btn-light:hover {
   background-color: var(--clr-accent-2);
+}
+
+.socials {
+  display: flex;
+  gap: 1rem;
 }
