--- a/equalizer-landing-page/style.css
+++ b/equalizer-landing-page/style.css
@@ -24,7 +24,7 @@ html {
 
 body {
   font-family: "IBM Plex Sans", sans-serif;
-  background-image: url(./assets/bg-main-mobile.png);
+  /* background-image: url(./assets/bg-main-mobile.png); */
   background-color: var(--clr-neutral-100);
   background-position: right -200px;
   background-repeat: no-repeat;
@@ -81,12 +81,14 @@ footer p {
   background-image: url(./assets/bg-pattern-2.svg);
   background-repeat: no-repeat;
   background-position: top;
+  position: relative;
+  height: 930px;
 }
 
 .img-card {
   width: 250px;
-  margin-top: -100px;
-  margin-bottom: 50px;
+  position: absolute;
+  top: -120px;
 }
 
 .price-card {
@@ -98,6 +100,8 @@ footer p {
   border-radius: 20px;
   background-color: var(--clr-primary);
   color: var(--clr-font-dark);
+  position: absolute;
+  top: 450px;
 }
 
 .loose {
@@ -146,3 +150,40 @@ footer p {
   display: flex;
   gap: 1rem;
 }
+
+@media (max-width: 600px) {
+  body {
+    background-image: url(assets/bg-main-mobile.png);
+  }
+}
+
+@media (min-width: 601px) {
+  body {
+    background-image: url(assets/bg-main-tablet.png);
+  }
+
+  .wrapper {
+    background-image: url(assets/bg-pattern-1.svg);
+    background-repeat: no-repeat;
+    background-position: right top;
+    background-size: 200px;
+  }
+
+  h1 {
+    font-size: 3.75rem;
+  }
+
+  .hero {
+    padding-right: 30%;
+  }
+
+  .cta-cards {
+    margin-inline: 1rem;
+  }
+
+  .price-card {
+    width: 400px;
+  }
+}
+
+/* background-image: url(./assets/bg-main-mobile.png); */
