--- a/equalizer-landing-page/style.css
+++ b/equalizer-landing-page/style.css
@@ -85,6 +85,10 @@ footer p {
   height: 930px;
 }
 
+.logo {
+  flex-shrink: 0;
+}
+
 .img-card {
   width: 250px;
   position: absolute;
@@ -174,16 +178,56 @@ footer p {
   }
 
   .hero {
-    padding-right: 30%;
+    /* padding-right: 30%; */
+    max-width: 50%;
   }
 
   .cta-cards {
     margin-inline: 1rem;
+    height: 525px;
+    margin-bottom: 6rem;
+  }
+
+  .img-card {
+    left: 75px;
   }
 
   .price-card {
+    top: 125px;
+    right: 75px;
     width: 400px;
+  }
+
+  footer {
+    display: flex;
+    flex-wrap: wrap;
+    /* justify-content: center; */
+    align-items: center;
+  }
+
+  footer p {
+    flex-basis: 450px;
+  }
+
+  .socials {
+    margin-left: auto;
   }
 }
 
 /* background-image: url(./assets/bg-main-mobile.png); */
+
+@media (min-width: 900px) {
+  .hero {
+    max-width: 60%;
+  }
+
+  footer {
+    display: flex;
+    gap: 3rem;
+    align-items: flex-start;
+  }
+
+  footer p {
+    margin: 0;
+  }
+}
