--- a/equalizer-landing-page/style.css
+++ b/equalizer-landing-page/style.css
@@ -82,7 +82,7 @@ footer p {
   background-repeat: no-repeat;
   background-position: top;
   position: relative;
-  height: 930px;
+  height: 990px;
 }
 
 .logo {
@@ -98,7 +98,7 @@ footer p {
 .price-card {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
   gap: 1rem;
   padding: 1rem 2rem;
   border-radius: 20px;
@@ -106,6 +106,21 @@ footer p {
   color: var(--clr-font-dark);
   position: absolute;
   top: 450px;
+}
+
+.price-card .btn {
+  align-self: center;
+}
+
+.price {
+  display: flex;
+  align-items: center;
+}
+
+.price span {
+  font-size: 4rem;
+  font-weight: 700;
+  margin-right: 1rem;
 }
 
 .loose {
@@ -185,7 +200,7 @@ footer p {
   .cta-cards {
     margin-inline: 1rem;
     height: 525px;
-    margin-bottom: 6rem;
+    margin-bottom: 8rem;
   }
 
   .img-card {
@@ -193,7 +208,7 @@ footer p {
   }
 
   .price-card {
-    top: 125px;
+    top: 75px;
     right: 75px;
     width: 400px;
   }
