--- a/skilled-learning-landing-page/style.css
+++ b/skilled-learning-landing-page/style.css
@@ -13,7 +13,9 @@
   --gradient-2: #4851ff, #f02aa6;
 }
 
-* {
+*,
+*::after,
+*::before {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -28,6 +30,7 @@ body {
     5%,
     var(--clr-neutral-100)
   );
+  color: var(--clr-neutral-900);
 }
 
 section.cards {
@@ -35,6 +38,16 @@ section.cards {
   grid-template-columns: 1fr;
   row-gap: 2rem;
   padding-inline: 1rem;
+}
+
+.hero--card {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+}
+
+.hero--card .btn {
+  align-self: start;
 }
 
 h1,
@@ -47,6 +60,7 @@ h4 {
 h1 {
   font-size: 3.5rem;
   line-height: 1.25;
+  margin-bottom: 1rem;
 }
 
 h2 {
@@ -114,6 +128,9 @@ p.body--small {
   background-color: var(--clr-neutral-100);
   border-radius: 0.5rem;
 }
+.card h3 {
+  color: var(--clr-neutral-100);
+}
 
 .card img {
   width: 3rem;
@@ -124,4 +141,12 @@ p.body--small {
   color: var(--clr-primary-700);
   text-decoration: none;
   font-weight: 700;
+}
+
+/* mobile layout */
+
+@media (max-width: 500px) {
+  h1 {
+    font-size: 2.5rem;
+  }
 }
