--- a/skilled-learning-landing-page/style.css
+++ b/skilled-learning-landing-page/style.css
@@ -36,8 +36,8 @@ body {
 section.cards {
   display: grid;
   grid-template-columns: 1fr;
-  row-gap: 2rem;
-  padding-inline: 1rem;
+  row-gap: 3rem;
+  padding: 0 1rem 4rem;
 }
 
 header {
@@ -63,6 +63,11 @@ footer {
 
 .hero--card .btn {
   align-self: start;
+}
+
+.hero--image {
+  display: block;
+  margin: 0 auto;
 }
 
 h1,
@@ -124,6 +129,7 @@ p.body--small {
   background-color: var(--clr-neutral-900);
   text-decoration: none;
   padding: 1rem 2rem;
+  color: var(--clr-neutral-100);
 }
 
 .btn:hover {
