--- a/skilled-learning-landing-page/style.css
+++ b/skilled-learning-landing-page/style.css
@@ -78,7 +78,7 @@ h4 {
 }
 
 h1 {
-  font-size: 3.5rem;
+  font-size: 2.5rem;
   line-height: 1.25;
   margin-bottom: 1rem;
 }
@@ -164,10 +164,16 @@ p.body--small {
   font-weight: 700;
 }
 
-/* mobile layout */
+/* tablet layout */
 
-@media (max-width: 500px) {
+@media (min-width: 768px) {
   h1 {
-    font-size: 2.5rem;
+    font-size: 3.5rem;
+  }
+
+  section.cards {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 1rem;
   }
 }
