--- a/skilled-learning-landing-page/style.css
+++ b/skilled-learning-landing-page/style.css
@@ -24,7 +24,6 @@
 body {
   font-family: "Plus Jakarta Sans", sans-serif;
   background-position: fixed;
-  overflow-x: hidden;
   background: linear-gradient(
     0deg,
     var(--clr-neutral-500),
@@ -209,5 +208,28 @@ p.body--small {
     display: block;
     margin-top: -10rem;
     margin-left: -3rem;
+    z-index: -999;
+  }
+}
+
+@media (min-width: 1200px) {
+  h1 {
+    font-size: 4.375rem;
+  }
+
+  section.cards {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .hero-card--image-mobile,
+  .hero-card--image-tablet {
+    display: none;
+  }
+
+  .hero-card--image-desktop {
+    display: block;
+    margin-top: -10rem;
+    margin-left: -3rem;
+    z-index: -999;
   }
 }
